补全 Trinity 缓存与批量发配验收